force-app/main/default/objects/Exception_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Cause of the error</description>
    <label>Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>