force-app/main/default/objects/Exception_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type: Type of Exception</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>